--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "site-password",
   "version": "1.0.0",
-  "description": "Retrieve a saved password for a site in OS X Keychain",
+  "description": "Retrieve your password for a site saved in OS X Keychain",
   "license": "MIT",
   "repository": "gillstrom/site-password",
   "author": {
